Unwanted-Spacing Bug im Stil der Content-Elemente gefixt.

--- a/Resources/Private/SCSS/partials/_content-elements.scss
+++ b/Resources/Private/SCSS/partials/_content-elements.scss
@@ -8,6 +8,8 @@
 .csc-wide-ltr-padding,
 .csc-default {
   position: relative;
+  display: inline-block;
+  width: 100%;
   @media screen and (min-width: $break-desktop-1) {
     background-color: $white;
   }
